--- a/src/app/components/add-users/add-product.component.html
+++ b/src/app/components/add-users/add-product.component.html
@@ -1,26 +1,50 @@
 <h2>Add Users</h2>
 
-<h3>Ici il y a la liste de tout les utilisateurs ajouté en base</h3>
+<!--<h3>Ici il y a la liste de tout les utilisateurs ajouté en base</h3>-->
 
-<form class="form">
-  <div>
-    <label for="username">Username</label>
-    <input id="username" type="text" [(ngModel)]="Users.username" name="title">
+<!--<form class="form">-->
+<!--  <div>-->
+<!--    <label for="username">Username</label>-->
+<!--    <input id="username" type="text" [(ngModel)]="Users.username" name="title">-->
+<!--  </div>-->
+
+<!--  <div>-->
+<!--    <label for="lastname">lastname</label>-->
+<!--    <input id="lastname" type="text" [(ngModel)]="Users.lastname" name="description">-->
+<!--  </div>-->
+
+<!--  <div>-->
+<!--    <label for="password">mot de passe</label>-->
+<!--    <input id="password" type="text" [(ngModel)]="Users.adresseMail" name="description">-->
+<!--  </div>-->
+
+<!--  <div>-->
+<!--    <button type="button" (click)="addUsers()">Add</button>-->
+<!--  </div>-->
+  <div class="container">
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Username</label>
+        <input type="email" class="form-control" [(ngModel)]="Users.username" name="title" id="exampleInputEmail1"
+               aria-describedby="emailHelp" placeholder="Username">
+        <small id="emailHelp" class="form-text text-muted"></small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Lastname</label>
+        <input type="password" class="form-control" [(ngModel)]="Users.lastname" id="exampleInputPassword1" placeholder="Lastname">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Adresse mail</label>
+        <input type="password" class="form-control" [(ngModel)]="Users.adresseMail" id="Adresse mail" placeholder="Adresse mail">
+      </div>
+
+      <div class="form-group">
+        <label for="exampleInputPassword1">Phone number</label>
+        <input type="password" class="form-control" [(ngModel)]="Users.PhoneNumber" id="Phone number" placeholder="Adresse mail">
+      </div>
+      <button type="submit" (click)="addUsers()" class="btn btn-primary">Submit</button>
+    </form>
   </div>
 
-  <div>
-    <label for="lastname">lastname</label>
-    <input id="lastname" type="text" [(ngModel)]="Users.lastname" name="description">
-  </div>
 
-  <div>
-    <label for="password">mot de passe</label>
-    <input id="password" type="text" [(ngModel)]="Users.password" name="description">
-  </div>
-
-  <div>
-    <button type="button" (click)="addUsers()">Add</button>
-  </div>
-
-
-</form>
+<!--</form>-->
