--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -10,7 +10,7 @@
       <h5 class="card-text">
         <div>{{user.password}}</div>
       </h5>
-      <a href="#" class="btn btn-primary">More...</a>
+      <a href="#" class="btn btn-primary">Plus de détails</a>
     </div>
   </div>
 </div>
