--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -5,10 +5,19 @@
   <div class="card-body">
     <div class="row">
       <h2 class="card-title">
-        <div>{{user.username}}</div>
+        <div>{{user.firstname}}</div>
       </h2>
+      <h2 class="card-text">
+      <div>{{user.lastname}}</div>
+    </h2>
       <h5 class="card-text">
-        <div>{{user.password}}</div>
+        <div>{{user.adresseMail}}</div>
+      </h5>
+      <h5 class="card-text">
+        <div>{{user.phoneNumber}}</div>
+      </h5>
+      <h5 class="card-text">
+        <div>{{user.username}}</div>
       </h5>
       <a href="#" class="btn btn-primary">Plus de détails</a>
     </div>
