--- a/src/app/components/add-users/add-product.component.html
+++ b/src/app/components/add-users/add-product.component.html
@@ -25,22 +25,29 @@
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1">Username</label>
-        <input type="email" class="form-control" [(ngModel)]="Users.username" name="title" id="exampleInputEmail1"
+        <input type="email" class="form-control" [(ngModel)]="Users.firstname" name="firstname" id="exampleInputEmail1"
                aria-describedby="emailHelp" placeholder="Username">
         <small id="emailHelp" class="form-text text-muted"></small>
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Lastname</label>
-        <input type="password" class="form-control" [(ngModel)]="Users.lastname" id="exampleInputPassword1" placeholder="Lastname">
+        <input type="text" class="form-control" [(ngModel)]="Users.username" name="username" id="username" placeholder="Lastname">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Lastname</label>
+        <input type="text" class="form-control" [(ngModel)]="Users.lastname" name="lastname" id="exampleInputPassword1" placeholder="Lastname">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Adresse mail</label>
-        <input type="password" class="form-control" [(ngModel)]="Users.adresseMail" id="Adresse mail" placeholder="Adresse mail">
+        <input type="text" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail" placeholder="Adresse mail">
       </div>
-
       <div class="form-group">
         <label for="exampleInputPassword1">Phone number</label>
-        <input type="password" class="form-control" [(ngModel)]="Users.PhoneNumber" id="Phone number" placeholder="Adresse mail">
+        <input type="text" class="form-control" [(ngModel)]="Users.phoneNumber" name="phoneNumber" id="Phone number" placeholder="Adresse mail">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Phone number</label>
+        <input type="text" class="form-control" [(ngModel)]="Users.adresseMail" name="adresseMail" id="adresseMail" placeholder="Adresse mail">
       </div>
       <button type="submit" (click)="addUsers()" class="btn btn-primary">Submit</button>
     </form>
