--- a/src/app/components/add-users/add-product.component.html
+++ b/src/app/components/add-users/add-product.component.html
@@ -30,24 +30,24 @@
         <small id="emailHelp" class="form-text text-muted"></small>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Lastname</label>
-        <input type="text" class="form-control" [(ngModel)]="Users.username" name="username" id="username" placeholder="Lastname">
+        <label for="exampleInputPassword1">username</label>
+        <input type="text" class="form-control"  [(ngModel)]="Users.username" name="username" id="username" placeholder="Lastname">
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1">Lastname</label>
         <input type="text" class="form-control" [(ngModel)]="Users.lastname" name="lastname" id="exampleInputPassword1" placeholder="Lastname">
       </div>
       <div class="form-group">
+        <label for="exampleInputPassword1">password</label>
+        <input type="text" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail" placeholder="password">
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Phone number</label>
+        <input type="number" class="form-control" [(ngModel)]="Users.phoneNumber" name="phoneNumber" id="Phone number" placeholder="phoneNumber">
+      </div>
+      <div class="form-group">
         <label for="exampleInputPassword1">Adresse mail</label>
-        <input type="text" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail" placeholder="Adresse mail">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Phone number</label>
-        <input type="text" class="form-control" [(ngModel)]="Users.phoneNumber" name="phoneNumber" id="Phone number" placeholder="Adresse mail">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">Phone number</label>
-        <input type="text" class="form-control" [(ngModel)]="Users.adresseMail" name="adresseMail" id="adresseMail" placeholder="Adresse mail">
+        <input type="email" class="form-control" [(ngModel)]="Users.adresseMail" name="adresseMail" id="adresseMail" placeholder="Adresse mail">
       </div>
       <button type="submit" (click)="addUsers()" class="btn btn-primary">Submit</button>
     </form>
