--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" routerLink="users">Users List</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="add-product">Add User</a>
+          <a class="nav-link" routerLink="add-user">Add User</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="schedule">Schedule</a>
