ajout page de connexion

--- a/src/app/components/my-profil/my-profil.component.html
+++ b/src/app/components/my-profil/my-profil.component.html
@@ -1,1 +1,34 @@
 <h5>Edit du profil, a faire</h5>
+
+
+<div class="container">
+  <form>
+    <div class="form-group">
+      <label for="exampleInputEmail1">Username</label>
+      <input type="email" class="form-control" [(ngModel)]="Users.firstname" name="firstname" id="exampleInputEmail1"
+             aria-describedby="emailHelp" placeholder="Username">
+      <small id="emailHelp" class="form-text text-muted"></small>
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">username</label>
+      <input type="text" class="form-control"  [(ngModel)]="Users.username" name="username" id="username" placeholder="Lastname">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Lastname</label>
+      <input type="text" class="form-control" [(ngModel)]="Users.lastname" name="lastname" id="exampleInputPassword1" placeholder="Lastname">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">password</label>
+      <input type="text" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail" placeholder="password">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Phone number</label>
+      <input type="number" class="form-control" [(ngModel)]="Users.phoneNumber" name="phoneNumber" id="Phone number" placeholder="phoneNumber">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Adresse mail</label>
+      <input type="email" class="form-control" [(ngModel)]="Users.adresseMail" name="adresseMail" id="adresseMail" placeholder="Adresse mail">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
