--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -19,7 +19,10 @@
       <h6 class="card-text">
         <div>username :{{user.username}}</div>
       </h6>
-      <a href="" class="btn btn-primary">Plus de détails</a>
+
+      <button type="submit" (click)="suppUsers()" class="btn btn-danger">Delete</button>
+<!--      <button type="submit" (click)="suppUsers()" class="btn btn-info">Plus de detail</button>-->
+
     </div>
   </div>
 </div>
