--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -4,8 +4,8 @@
 <div class="login">
   <h2 class="login-header">S'identifier</h2>
   <form [formGroup]="loginForm" class="login-container" (ngSubmit)="seConnecter()">
-    <p [ngClass]="{ 'has-error': isSubmitted && formControls['email'].errors }">
-      <input type="email" placeholder="Email" formControlName="email">
+    <p [ngClass]="{ 'has-error': isSubmitted && formControls['username'].errors }">
+      <input type="email" placeholder="Username" formControlName="email">
     </p>
 
     <div *ngIf="isSubmitted && formControls['email'].errors" class="help-block">
