--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link" routerLink="schedule">Schedule</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="weather">Weather</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="myprofil">My profile</a>
         </li>
       </ul>
