--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -43,7 +43,7 @@
       </div>
       <div class="form-group">
         <label for="Adresse mail">Password</label>
-        <input type="text" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail"
+        <input type="password" class="form-control" [(ngModel)]="Users.password" name="password" id="Adresse mail"
                placeholder="Password">
       </div>
       <p>
