--- a/src/app/components/connexion/connexion.component.html
+++ b/src/app/components/connexion/connexion.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <p>
-      <input type="submit" (click)="signIn(4000)" value="Log in">
+      <input type="submit" (click)="LogIn(4000)" value="Log in">
     </p>
     <p>
       Pas encore de compte ?
