CSS click to update
Slight CSS to highlight info while hovering and indicating it is clickable

--- a/src/app/components/my-profil/my-profil.component.html
+++ b/src/app/components/my-profil/my-profil.component.html
@@ -1,22 +1,31 @@
 <h4>TODO: Profil</h4>
-
 <div class="container">
-    <h6>Nom d'utilisateur :</h6>
-    <p>{{User.username}}</p>
-</div>
-<div class="container">
-    <h6>Adresse mail :</h6>
-    <p>{{User.adresseMail}}</p>
-</div>
-<div class="container">
-    <h6>Prénom :</h6>
-    <p>{{User.firstname}}</p>
-</div>
-<div class="container">
-    <h6>Nom :</h6>
-    <p>{{User.lastname}}</p>
-</div>
-<div class="container">
-    <h6>Téléphone :</h6>
-    <p>{{User.phoneNumber}}</p>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Nom d'utilisateur :</h6>
+        <p>{{User.username}}</p>
+    </div>
+    <hr>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Adresse mail :</h6>
+        <p>{{User.adresseMail}}</p>
+    </div>
+    <hr>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Prénom :</h6>
+        <p>{{User.firstname}}</p>
+    </div>
+    <hr>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Nom :</h6>
+        <p>{{User.lastname}}</p>
+    </div>
+    <hr>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Téléphone :</h6>
+        <p>{{User.phoneNumber}}</p>
+    </div>
+    <hr>
+    <div class="container update" onclick="location.href='';" style="cursor: pointer;">
+        <h6>Modifier mot de passe</h6>
+    </div>
 </div>
