Partage liste evenement par mail

--- a/src/app/components/calendar/calendar.component.html
+++ b/src/app/components/calendar/calendar.component.html
@@ -31,6 +31,7 @@
     </div>
   </div>
 </div>
+<button class="btn btn-info" (click)="shareEventByEmail()">Partager</button>
 
 <table class="table mt-4">
   <thead>
