--- a/src/app/components/weather/weather.component.html
+++ b/src/app/components/weather/weather.component.html
@@ -12,8 +12,8 @@
   <p>Vitesse du vent : {{ weather.current.wind_speed }} km/h</p>
 </div>
 
-<form (ngSubmit)="onSubmit()">
+<form>
   <label for="city">Ville :</label>
-  <input type="text" id="city" [(ngModel)]="city" name="city">
+  <input type="text" id="city" [(ngModel)]="city" (ngModelChange)="onSubmit()" name="city">
   <button type="submit">Chercher</button>
 </form>
