ajout mise en forme

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
 
 <!--    <button type="checkbox" (click)="rememberMe()" value="Se souvenir de moi">Se souvenir de moi</button>-->
 
-    <label  for="rememberMe"> <input type="checkbox" id="rememberMe" formControlName="rememberMe">Se souvenir de moi</label>
+<!--    <label  for="rememberMe"> <input type="checkbox" id="" formControlName="rememberMe">Se souvenir de moi</label>-->
 
     <p>
       <input type="submit" value="Se connecter">
