modif my profil

--- a/src/app/components/my-profil/my-profil.component.html
+++ b/src/app/components/my-profil/my-profil.component.html
@@ -2,7 +2,7 @@
 
 <h4>Profil</h4>
 <div *ngIf="currentUser" class="container">
-  {{currentUser | json}}
+<!--  {{currentUser | json}}-->
   <div class="container update" data-bs-toggle="modal" data-bs-target="#usernamePrompt" style="cursor: pointer;">
     <h6>Nom d'utilisateur :</h6>
     <p>{{currentUser.username}}</p>
